bugfix in method to update user and create user